test/files/neg/t12531.scala

class C {
  def format(i: Int): String = s"${format("")}"
}
