test/files/neg/t12531.check
t12531.scala:3: error: type mismatch;
 found   : String("")
 required: Int
  def format(i: Int): String = s"${format("")}"
                                          ^
1 error
